# my-qq-bot

./: .gitignore
nonebot.venv/: pyvenv.cfg
shimiru-bot/: .env.prod  README.md  bot.py  pyproject.toml
shimiru-bot/data/nonebot_plugin_rollpig/: pig.json  today.json
shimiru-bot/shimiru-bot/plugins/arcaea/: .__init__.py.swp  __init__.py
shimiru-bot/shimiru-bot/plugins/arcaea/arcaea-assets/: download.py  getSongNameKVPair.py  inserSongTitle.py  insertSongName.py  jptCutter.py  main.py  main.py.save  main2.py  mapping.py  page.html  song_alias.json  songs.json
shimiru-bot/shimiru-bot/plugins/bandream/: __init__.py
shimiru-bot/shimiru-bot/plugins/lovelive/: __init__.py  as_cards.yaml  download_cards.py  scrape_as_cards.py
shimiru-bot/shimiru-bot/plugins/sekai/: __init__.py  card_cache.py  card_map.json  db.py  my_config.yaml
shimiru-bot/shimiru-bot/plugins/sekai/memory/: 1079773525.json  1143440753.json  1505558212.json  1648615795.json  1793241764.json  213476329.json  226558528.json  2375727478.json  2521879646.json  2564075295.json  2664224975.json  2921004625.json  3045843086.json  3530739161.json  3889054356.json  3966695735.json  402263118.json  591980800.json
