[project]
name = "shimiru-bot"
version = "0.1.0"
description = "shimiru-bot"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "nonebot2[fastapi,websockets]>=2.4.4",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-adapter-console>=0.9.0",
    "nonebot-plugin-status>=0.9.0",
    "nonebot-plugin-docs>=2.4.4",
    "nonebot-plugin-apscheduler>=0.5.0",
]

[tool.nonebot]
plugin_dirs = ["shimiru-bot/plugins"]
builtin_plugins = ["echo"]

[tool.nonebot.adapters]
nonebot-adapter-onebot = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" }
]
nonebot-adapter-console = [
    { name = "Console", module_name = "nonebot.adapters.console" }
]
"@local" = []

[tool.nonebot.plugins]
"@local" = []
nonebot-plugin-status = ["nonebot_plugin_status"]
nonebot-plugin-docs = ["nonebot_plugin_docs"]
nonebot-plugin-apscheduler = ["nonebot_plugin_apscheduler"]
